refactoring to use first+last in PathDetail class, WIP as simplification has still bugs